--- a/docs/Example_Use_Case.ipynb
+++ b/docs/Example_Use_Case.ipynb
@@ -5,15 +5,193 @@
    "metadata": {},
    "source": [
     "# Example ALOHA Depth Profile Analysis\n",
-    "This Jupyter Notebook walks through analysis of [description]. "
+    "This Jupyter Notebook walks through analysis of [dataset name] following steps detailed in ProSynTaxDB README. \n",
+    "\n",
+    "## Setting up the Workflow\n",
+    "### Installing the ProSynTaxDB Workflow\n",
+    "Note: run commands below in your Linux terminal instead of a Jupyter Notebook. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/nvo\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Cloning into 'ProSynTaxDB-workflow'...\n",
+      "Updating files: 100% (54/54), done.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ProSynTaxDB-workflow\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash  \n",
+    "\n",
+    "# show current directory\n",
+    "pwd  \n",
+    "\n",
+    "# create project directory\n",
+    "mkdir Classification_ALOHA  \n",
+    "\n",
+    "# change into project directory \n",
+    "cd Classification_ALOHA  \n",
+    "\n",
+    "# clone the workflow into project directory\n",
+    "git clone https://github.com/jamesm224/ProSynTaxDB-workflow.git\n",
+    "\n",
+    "# check to make sure repository was cloned\n",
+    "ls"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setting up the Workflow\n",
-    "### Installing the ProSynTaxDB Workflow"
+    "### Installing ProSynTaxDB\n",
+    "Download associated database files from [Zenodo repository](https://zenodo.org/records/14889681?preview=1&token=eyJhbGciOiJIUzUxMiJ9.eyJpZCI6IjEwM2VjMmJlLTU2NzEtNDEyNC1hZTQwLWY0NDFkNzUwMTU4OSIsImRhdGEiOnt9LCJyYW5kb20iOiI4NjkwMTllMGQ4MWYyYTU1MzBkMDYzYWU3MmYwOTNhNSJ9.9Nedfc8bI5MZ4Mio_TaWmq26RYLHCf2mSdXpupnHUFoDb9CuAKTdL7cb88SeiSA1bW0Ft-XYe1YlmkVtijWQbg) (DOI 10.5281/zenodo.14889681). \n",
+    "\n",
+    "Note: run commands below in your Linux terminal instead of a Jupyter Notebook. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CyCOG6.dmnd\n",
+      "ProSynTaxDB_file.fmi\n",
+      "ProSynTaxDB_names.dmp\n",
+      "ProSynTaxDB_nodes.dmp\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash  \n",
+    "# create directory for database files\n",
+    "mkdir -p Classification_ALOHA/ProSynTaxDB-files\n",
+    "\n",
+    "# download the files from Zenodo and upload to directory\n",
+    "\n",
+    "# check to make sure files were downloaded \n",
+    "ls Classification_ALOHA/ProSynTaxDB-files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Installing Dependencies\n",
+    "Install Mamba and Snakemake following instructions in Workflow README. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mamba 1.4.2\n",
+      "conda 23.3.1\n",
+      "Snakemake version:\n",
+      "7.32.4\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash  \n",
+    "\n",
+    "# check that mamba was installed properly \n",
+    "mamba --version \n",
+    "\n",
+    "# check that Snakemake was installed properly \n",
+    "mamba activate snakemake\n",
+    "echo Snakemake version:\n",
+    "snakemake --version \n",
+    "mamba deactivate "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Edit Workflow Specifications\n",
+    "1. Edit experimental configuration file ```inputs/config.yaml```  \n",
+    "    - Note: in this example, the `scratch directory` will be created inside `ProSynTaxDB-workflow`, but it is recommended that this directory is located in a non-backed up project storage such as /nobackup. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "experiment_name: read_classification\n",
+      "\n",
+      "input: \n",
+      "  sample table: inputs/samples.tsv\n",
+      "  adapter_file: inputs/all_illumina_adapters.fa\n",
+      "  cycog_file: inputs/cycog_len.tsv\n",
+      "  nodes_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_nodes.dmp\n",
+      "  names_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_names.dmp\n",
+      "  fmi_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_file.fmi\n",
+      "  diamond_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/CyCOG6.dmnd\n",
+      "  \n",
+      "\n",
+      "classification_summary:\n",
+      "  # list of genus to extract read count for (remaining genus will be summed into \"other_genus\")\n",
+      "  genus_list: ['Synechococcus', 'Prochlorococcus', 'unclassified']\n",
+      "\n",
+      "scratch directory: scratch\n",
+      "results directory: results\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "cat /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-workflow/inputs/config.yaml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Create ```inputs/samples.tsv``` file containing metadata for your samples\n",
+    "    - For this example use case, we're analyzing Station ALOHA data from Mende et al. 2017"
    ]
   },
   {
@@ -22,15 +200,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create a project directory\n"
+    "%%bash \n",
+    "\n",
+    "# create folder for raw reads\n",
+    "mkdir -p Classification_ALOHA/raw_reads\n",
+    "\n",
+    "# download SRA files"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
