added conda env package version + removed kaiju-krona

--- a/docs/ALOHA_Use_Case.ipynb
+++ b/docs/ALOHA_Use_Case.ipynb
@@ -144,13 +144,13 @@
    "metadata": {},
    "source": [
     "### Edit Workflow Specifications\n",
-    "1. Edit experimental configuration file ```inputs/config.yaml```  \n",
-    "    - Note: in this example, the `scratch directory` will be created inside `ProSynTaxDB-workflow`, but it is recommended that this directory is located in a non-backed up project storage such as /nobackup. "
+    "Edit experimental configuration file ```inputs/config.yaml```  \n",
+    "- Note: in this example, the `scratch directory` will be created inside `ProSynTaxDB-workflow`, but it is recommended that this directory is located in a non-backed up project storage such as /nobackup. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -183,15 +183,15 @@
    "source": [
     "%%bash\n",
     "\n",
-    "cat /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-workflow/inputs/config.yaml"
+    "cat Classification_ALOHA/ProSynTaxDB-workflow/inputs/config.yaml"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2. Create ```inputs/samples.tsv``` file containing metadata for your samples\n",
-    "    - For this example use case, we're analyzing Station ALOHA data from Mende et al. 2017"
+    "Create ```inputs/samples.tsv``` file containing metadata for your samples\n",
+    "- For this example use case, we're analyzing Station ALOHA data from Mende et al. 2017"
    ]
   },
   {
@@ -205,8 +205,80 @@
     "# create folder for raw reads\n",
     "mkdir -p Classification_ALOHA/raw_reads\n",
     "\n",
-    "# download SRA files"
+    "# download SRA files\n",
+    "\n",
+    "# create samples.tsv file\n",
+    "cat Classification_ALOHA/ProSynTaxDB-workflow/inputs/samples.tsv"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Edit Snakemake specifications and resource specifications in ```profile/config.yaml``` file. \n",
+    "- Edited partition name to appropriate partition. \n",
+    "\n",
+    "Edit the main Snakemake workflow submission ```run_classify_smk.sbatch``` file. \n",
+    "- Edited partition name to appropriate partition. \n",
+    "\n",
+    "## Running the Workflow\n",
+    "### Submitting Main Script"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Submitted batch job 64284248\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# change working directory to workflow (if not already there)\n",
+    "cd Classification_ALOHA/ProSynTaxDB-workflow\n",
+    "\n",
+    "# submit script\n",
+    "sbatch run_classify_smk.sbatch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "             JOBID PARTITION     NAME     USER ST       TIME  NODES NODELIST(REASON)\n",
+      "          64284248 sched_mit classify      nvo PD       0:00      1 (Priority)\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# check that script is running (sched_mit_hill is the partition)\n",
+    "squeue -u nvo -p sched_mit_hill"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
