--- a/docs/ALOHA_Use_Case.ipynb
+++ b/docs/ALOHA_Use_Case.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "# Example ALOHA Depth Profile Analysis\n",
-    "This Jupyter Notebook walks through analysis of [dataset name] following steps detailed in ProSynTaxDB README. \n",
+    "This Jupyter Notebook walks through analysis of [dataset name] following steps detailed in ProSynTax README. \n",
     "\n",
     "## Setting up the Workflow\n",
-    "### Installing the ProSynTaxDB Workflow\n",
+    "### Installing the ProSynTax Workflow\n",
     "Note: run commands below in your Linux terminal instead of a Jupyter Notebook. "
    ]
   },
@@ -30,7 +30,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Cloning into 'ProSynTaxDB-workflow'...\n",
+      "Cloning into 'ProSynTax-workflow'...\n",
       "Updating files: 100% (54/54), done.\n"
      ]
     },
@@ -38,7 +38,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ProSynTaxDB-workflow\n"
+      "ProSynTax-workflow\n"
      ]
     }
    ],
@@ -55,7 +55,7 @@
     "cd Classification_ALOHA  \n",
     "\n",
     "# clone the workflow into project directory\n",
-    "git clone https://github.com/jamesm224/ProSynTaxDB-workflow.git\n",
+    "git clone https://github.com/jamesm224/ProSynTax-workflow.git\n",
     "\n",
     "# check to make sure repository was cloned\n",
     "ls"
@@ -65,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Installing ProSynTaxDB\n",
+    "### Installing ProSynTax\n",
     "Download associated database files from [Zenodo repository](https://zenodo.org/records/14889681?preview=1&token=eyJhbGciOiJIUzUxMiJ9.eyJpZCI6IjEwM2VjMmJlLTU2NzEtNDEyNC1hZTQwLWY0NDFkNzUwMTU4OSIsImRhdGEiOnt9LCJyYW5kb20iOiI4NjkwMTllMGQ4MWYyYTU1MzBkMDYzYWU3MmYwOTNhNSJ9.9Nedfc8bI5MZ4Mio_TaWmq26RYLHCf2mSdXpupnHUFoDb9CuAKTdL7cb88SeiSA1bW0Ft-XYe1YlmkVtijWQbg) (DOI 10.5281/zenodo.14889681). \n",
     "\n",
     "Note: run commands below in your Linux terminal instead of a Jupyter Notebook. "
@@ -83,21 +83,21 @@
      "output_type": "stream",
      "text": [
       "CyCOG6.dmnd\n",
-      "ProSynTaxDB_file.fmi\n",
-      "ProSynTaxDB_names.dmp\n",
-      "ProSynTaxDB_nodes.dmp\n"
+      "ProSynTax_v1.1.fmi\n",
+      "ProSynTax_names.dmp\n",
+      "ProSynTax_nodes.dmp\n"
      ]
     }
    ],
    "source": [
     "%%bash  \n",
     "# create directory for database files\n",
-    "mkdir -p Classification_ALOHA/ProSynTaxDB-files\n",
+    "mkdir -p Classification_ALOHA/ProSynTax-files\n",
     "\n",
     "# download the files from Zenodo and upload to directory\n",
     "\n",
     "# check to make sure files were downloaded \n",
-    "ls Classification_ALOHA/ProSynTaxDB-files"
+    "ls Classification_ALOHA/ProSynTax-files"
    ]
   },
   {
@@ -145,7 +145,7 @@
    "source": [
     "### Edit Workflow Specifications\n",
     "Edit experimental configuration file ```inputs/config.yaml```  \n",
-    "- Note: in this example, the `scratch directory` will be created inside `ProSynTaxDB-workflow`, but it is recommended that this directory is located in a non-backed up project storage such as /nobackup. "
+    "- Note: in this example, the `scratch directory` will be created inside `ProSynTax-workflow`, but it is recommended that this directory is located in a non-backed up project storage such as /nobackup. "
    ]
   },
   {
@@ -165,10 +165,10 @@
       "  sample table: inputs/samples.tsv\n",
       "  adapter_file: inputs/all_illumina_adapters.fa\n",
       "  cycog_file: inputs/cycog_len.tsv\n",
-      "  nodes_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_nodes.dmp\n",
-      "  names_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_names.dmp\n",
-      "  fmi_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/ProSynTaxDB_file.fmi\n",
-      "  diamond_file: /nfs/home/nvo/Classification_ALOHA/ProSynTaxDB-files/CyCOG6.dmnd\n",
+      "  nodes_file: /nfs/home/nvo/Classification_ALOHA/ProSynTax-files/ProSynTax_nodes.dmp\n",
+      "  names_file: /nfs/home/nvo/Classification_ALOHA/ProSynTax-files/ProSynTax_names.dmp\n",
+      "  fmi_file: /nfs/home/nvo/Classification_ALOHA/ProSynTax-files/ProSynTax_v1.1.fmi\n",
+      "  diamond_file: /nfs/home/nvo/Classification_ALOHA/ProSynTax-files/CyCOG6.dmnd\n",
       "  \n",
       "\n",
       "classification_summary:\n",
@@ -183,7 +183,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "cat Classification_ALOHA/ProSynTaxDB-workflow/inputs/config.yaml"
+    "cat Classification_ALOHA/ProSynTax-workflow/inputs/config.yaml"
    ]
   },
   {
@@ -208,7 +208,7 @@
     "# download SRA files\n",
     "\n",
     "# create samples.tsv file\n",
-    "cat Classification_ALOHA/ProSynTaxDB-workflow/inputs/samples.tsv"
+    "cat Classification_ALOHA/ProSynTax-workflow/inputs/samples.tsv"
    ]
   },
   {
@@ -244,7 +244,7 @@
     "%%bash\n",
     "\n",
     "# change working directory to workflow (if not already there)\n",
-    "cd Classification_ALOHA/ProSynTaxDB-workflow\n",
+    "cd Classification_ALOHA/ProSynTax-workflow\n",
     "\n",
     "# submit script\n",
     "sbatch run_classify_smk.sbatch"
